--- a/config
+++ b/config
@@ -5,6 +5,7 @@ if test -n "$ngx_module_link"; then
     ngx_module_type=HTTP_AUX_FILTER
     ngx_module_name=ngx_http_lookuplibs_module
     ngx_module_srcs="$ngx_addon_dir/ngx_http_lookuplibs_module.c $ngx_addon_dir/ngx_http_lookuplib_radix_tree.c $ngx_addon_dir/ngx_http_lookuplibs_transforms.c $ngx_addon_dir/ngx_http_lookuplibs_lua.c"
+    ngx_module_order="$ngx_addon_name ngx_http_lua_module"
     . auto/module
 else
     HTTP_MODULES="$HTTP_MODULES ngx_http_lookuplibs_module"
